implement : validation, error response and SQLite database.
